--- a/src/app/page/edit/edit-customer/edit-customer.component.html
+++ b/src/app/page/edit/edit-customer/edit-customer.component.html
@@ -57,6 +57,14 @@
             Hiányzó adat!
           </div>
         </div>
+        <div class="form-check my-3">
+          <label class="form-check-label">
+            <input class="form-check-input" type="checkbox" name="active" [(ngModel)]="customer.active">Aktív
+            <span class="form-check-sign">
+              <span class="check"></span>
+            </span>
+          </label>
+        </div>
         <div class="btn-group">
         </div>
         <button [disabled]="customerForm.invalid || updating" type="submit" class="btn btn-primary btn-block btn-lg">
