--- a/src/app/page/edit/edit-bill/edit-bill.component.html
+++ b/src/app/page/edit/edit-bill/edit-bill.component.html
@@ -28,6 +28,7 @@
         </div>
         <button [disabled]="billForm.invalid || updating" type="submit" class="btn btn-primary btn-block">
           <i *ngIf="!updating" class="material-icons">save</i>
+          <i *ngIf="updating" class="material-icons refresh">cached</i>
         </button>
       </form>
     </div>
