--- a/src/app/page/edit/edit-customer/edit-customer.component.scss
+++ b/src/app/page/edit/edit-customer/edit-customer.component.scss
@@ -14,3 +14,19 @@
       opacity: 1;
     }
   }
+
+  @keyframes rotate {
+    0% {
+      transform: rotate(0deg);
+    }
+    50% {
+      transform: rotate(180deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+
+  .refresh {
+    animation: rotate 1s linear infinite;
+  }
