--- a/src/app/pages/list-customer/list-customer.component.html
+++ b/src/app/pages/list-customer/list-customer.component.html
@@ -1,9 +1,8 @@
 <div class="row">
-    <div class="col-md-10 offset-1">
+    <div class="col-md-12">
       <div class="card">
         <div class="card-header card-header-primary">
           <h4 class="card-title ">Customer Table</h4>
-          <p class="card-category"> This is the Customer list</p>
           <div class="d-flex p-2 mb-3 filter__group">
             <input [(ngModel)]="filterPhrase" class="form-control mr-sm-2 filter__input px-3" type="text" placeholder="Filter..." style="width: 200px;">
             <select [(ngModel)]="filterKey" class="form-control mr-3 filter__select px-3" style="width: 150px;">
@@ -20,7 +19,6 @@
                   <span [id]="'arrow_up_'+fkey" class="arrow material-icons md-18 arrow__active">keyboard_arrow_up</span>
                   <span [id]="'arrow_down_'+fkey" class="arrow material-icons md-18">keyboard_arrow_down</span>
                 </th>
-                
                 <th>actions</th>
               </thead>
 
@@ -37,10 +35,10 @@
                   <td>{{ customer.active }}</td>
                   <td>
                     <div class="btn-group" role="group">
-                      <button type="button" rel="tooltip" title="Edit Customer" class="btn btn-primary btn-link btn-sm">
+                      <button type="button" [routerLink]="'/customer/'+customer.id" rel="tooltip" title="Edit this Customer" class="btn btn-primary btn-link btn-sm">
                         <i class="material-icons">edit</i>
                       </button>
-                      <button type="button" rel="tooltip" title="Remove Customer" class="btn btn-danger btn-link btn-sm">
+                      <button type="button" (click)="deleteItem(customer)" rel="tooltip" title="Remove this Customer" class="btn btn-danger btn-link btn-sm">
                         <i class="material-icons">close</i>
                       </button>
                     </div>
