--- a/src/app/pages/list-order/list-order.component.html
+++ b/src/app/pages/list-order/list-order.component.html
@@ -1,57 +1,46 @@
-<div class="container">
-  <div class="row">
-    <div class="col-2 offset-5">
-      <form class="navbar-form">
-        <div class="input-group no-border">
-          <input (keyup)="onChangePhrase($event)" type="text" value="" class="form-control" placeholder="Filter by Status...">
+<div class="row">
+  <div class="col-md-8 offset-md-2">
+    <div class="card">
+      <div class="card-header card-header-primary">
+        <h4 class="card-title ">Order Table</h4>
+        <div class="d-flex p-2 mb-3 filter__group">
+          <input [(ngModel)]="filterPhrase" class="form-control mr-sm-2 filter__input px-3" type="text" placeholder="Filter..." style="width: 200px;">
+          <select [(ngModel)]="filterKey" class="form-control mr-3 filter__select px-3" style="width: 150px;">
+              <option *ngFor="let fkey of filterKeys" [value]="fkey">{{ fkey }}</option>
+          </select>
         </div>
-      </form>
+      </div>
+      <div class="card-body">
+        <div class="table-responsive">
+          <table class="table">
+            <thead class="text-primary">
+                <th *ngFor="let fkey of filterKeys" class="th__active" (click)="changeOrder(fkey)">
+                  {{ fkey }} 
+                  <span [id]="'arrow_up_'+fkey" class="arrow material-icons md-18 arrow__active">keyboard_arrow_up</span>
+                  <span [id]="'arrow_down_'+fkey" class="arrow material-icons md-18">keyboard_arrow_down</span>
+                </th>
+                <th>actions</th>
+            </thead>
+            <tbody>
+              <tr *ngFor="let order of orderList$ | async | filter:filterPhrase:filterKey | sorter:sortby:sorterDirection">
+                <td *ngFor="let item of order | keyvalue : originalOrder">
+                  {{item.value}}
+                </td>
+                <td>
+                  <div class="btn-group" role="group">
+                    <button type="button" [routerLink]="'/order/'+order.id" rel="tooltip" title="Edit this Order" class="btn btn-primary btn-link btn-sm">
+                      <i class="material-icons">edit</i>
+                    </button>
+                    <button type="button" (click)="deleteItem(order)" rel="tooltip" title="Remove this Order" class="btn btn-danger btn-link btn-sm">
+                      <i class="material-icons">close</i>
+                    </button>
+                  </div>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
     </div>
   </div>
-  <div class="row">
-    <div class="col-md-12">
-      <div class="card">
-        <div class="card-header card-header-primary">
-          <h4 class="card-title ">Orders</h4>
-          <p class="card-category">Order list</p>
-        </div>
-        <div class="card-body">
-          <div class="table-responsive">
-            <table class="table">
-              <thead class=" text-primary">
-          <tr>
-            <th>#</th>
-            <th>CustomerID</th>
-            <th>ProductID</th>
-            <th>Amount</th>
-            <th>Status</th>
-            <th></th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let order of orderList$ | async | filter:phrase:'status'">
-            <td>{{order.id}}</td>
-            <td>{{order.customerID}}</td>
-            <td>{{order.productID}}</td>
-            <td>{{order.amount}}</td>
-            <td>{{order.status}}</td>
-            <td>
-              <div class="btn-group">
-                <button type="button" rel="tooltip" title="Edit Order" class="btn btn-info btn-link btn-sm">
-                  <i class="material-icons">edit</i>
-                </button>
-                <button type="button" rel="tooltip" title="Delete Order" class="btn btn-danger btn-link btn-sm">
-                  <i class="material-icons">close</i>
-                </button>
-
-              </div>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-  </div>
-</div>
-</div>
-</div>
 </div>
