--- a/src/app/page/edit/edit-bill/edit-bill.component.html
+++ b/src/app/page/edit/edit-bill/edit-bill.component.html
@@ -27,8 +27,8 @@
           </div>
         </div>
         <button [disabled]="billForm.invalid || updating" type="submit" class="btn btn-primary btn-block">
-          <i *ngIf="!updating" class="material-icons">save</i>
-          <i *ngIf="updating" class="material-icons refresh">cached</i>
+          <i *ngIf="!updating" class="fa fa-floppy-o"></i>
+          <i *ngIf="updating" class="fa fa-refresh"></i>
         </button>
       </form>
     </div>
