--- a/src/app/page/listing/listing-product/listing-product.component.html
+++ b/src/app/page/listing/listing-product/listing-product.component.html
@@ -1,32 +1,32 @@
 <div class="container">
     <div class="row">
-        <div class="col-8 offset-2">
-            <h2 class="text-center mb-5 mt-5">Összes termék</h2>
+        <div class="col-4 offset-5 mb-5">
+            <h2>ÖSSZES TERMÉK</h2>
         </div>
-        <div class="col-12 my-3 mb-3">
-            <button class="btn btn-success btn-block" [routerLink]="[0]">
-        <i class="material-icons">edit</i>
-                Új tétel létrehozása
-            </button>
-        </div>
-  <div class="d-flex justify-content-center col-12 my-3">
-            <div class="mr-5">
-                <select [(ngModel)]="filterKey" class="form-control">
+        <div class="col-12 row">
+            <div class="col-5">
+                <button class="btn btn-success btn-block mt-3 mb-5" [routerLink]="[0]">
+                    <i class="material-icons">add</i>ÚJ TÉTEL LÉTREHOZÁSA
+                </button>
+            </div>
+            <div class="col-3 mt-3 mb-5"><select [(ngModel)]="filterKey" class="custom-select bg-light">
                     <option *ngFor="let key of filterKeys" [value]="key">
                         {{ key }}
                     </option>
                 </select>
             </div>
-            <div class="search-bar">
-                <form class="form-inline my-2 my-lg-0 d-flex justify-content-center">
-                    <input (keyup)='onChangePhrase($event)' class="form-control mr-sm-2" type="text" placeholder="Keresés">
-                    <button class="btn btn-primary mt-4 my-sm-0 ml-3" type="button"> <i class="fa fa-search"></i>
-                        Keresés</button>
+            <div class="col-4 search-bar mt-3 mb-5">
+                <form class="form-inline my-2 my-lg-0">
+                    <input (keyup)="onChangePhrase($event)" class="form-control mr-sm-2" type="text"
+                        placeholder="Keresés" />
+                    <button class="btn btn-success my-2 my-sm-0" type="submit">
+                        <i class="material-icons">manage_search</i> Keresés
+                    </button>
                 </form>
             </div>
         </div>
         <table class="table table-striped">
-            <thead class="thead-dark">
+            <thead class="bg-dark text-light">
                 <tr>
                     <th (click)="onColumnSelect('id')"> <b>#</b></th>
                     <th (click)="onColumnSelect('name')"><b>Termék név</b></th>
@@ -37,14 +37,15 @@
                     <th (click)="onColumnSelect('featured')"><b>Kiemelt</b></th>
                     <th (click)="onColumnSelect('active')"><b>Aktív</b></th>
                     <th (click)="onColumnSelect('operations')"><b>Műveletek</b></th>
-                     <th><i *ngIf="!direction" class="material-icons">keyboard_arrow_up</i>
-              <i *ngIf="direction" class="material-icons">keyboard_arrow_down</i>
-            </th>
-                
+                    <th><i *ngIf="!direction" class="material-icons">keyboard_arrow_up</i>
+                        <i *ngIf="direction" class="material-icons">keyboard_arrow_down</i>
+                    </th>
+
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let product of productList | async | filter:filterKey:phrase | sorter:sortedColumn:sortedOrder">
+                <tr
+                    *ngFor="let product of productList | async | filter:filterKey:phrase | sorter:sortedColumn:sortedOrder">
                     <td>
                         <span>{{ product.id }}</span>
                     </td>
@@ -53,8 +54,10 @@
                     <td>{{product.catId}}</td>
                     <td>{{product.description}}</td>
                     <td>{{product.price}}</td>
-                    <td><input class="form-control form-control-sm" [(ngModel)]="product.featured" type="checkbox" value="readonly"></td>
-                    <td><input class="form-control form-control-sm" [(ngModel)]="product.active" type="checkbox" value="readonly"></td>
+                    <td><input class="form-control form-control-sm" [(ngModel)]="product.featured" type="checkbox"
+                            value="readonly"></td>
+                    <td><input class="form-control form-control-sm" [(ngModel)]="product.active" type="checkbox"
+                            value="readonly"></td>
                     <td>{{product.operations}}
                         <div class="btn-group">
                             <button [routerLink]="[product.id]" class="btn btn-info">
