--- a/src/app/pages/list-bill/list-bill.component.html
+++ b/src/app/pages/list-bill/list-bill.component.html
@@ -14,9 +14,9 @@
         <div class="table-responsive">
           <table class="table">
             <thead class="text-primary">
-                <th *ngFor="let fkey of filterKeys" class="th__active" (click)="changeOrder(fkey)">
+                <th *ngFor="let fkey of filterKeys" [id]="'thead_'+fkey" class="th" (click)="changeOrder(fkey)">
                   {{ fkey }} 
-                  <span [id]="'arrow_up_'+fkey" class="arrow material-icons md-18 arrow__active">keyboard_arrow_up</span>
+                  <span [id]="'arrow_up_'+fkey" class="arrow material-icons md-18">keyboard_arrow_up</span>
                   <span [id]="'arrow_down_'+fkey" class="arrow material-icons md-18">keyboard_arrow_down</span>
                 </th>
                 <th>actions</th>
