header and card component

--- a/src/app/page/card/card.component.html
+++ b/src/app/page/card/card.component.html
@@ -10,8 +10,9 @@
   </div>
   <div class="card-footer">
     <div class="stats">
-      <i class="material-icons">{{ footIcon }}</i>
-      <a href="javascript:;">{{ footer }}</a>
+      <i class="material-icons foot">{{ footIcon }}</i>
+      <!-- <a href="javascript:;">{{ footer }}</a> -->
+      <span class="ml-2"> {{ footer }}</span>
     </div>
   </div>
 </div>
