--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="wrapper">
+  <app-header></app-header>
   <app-sidebar></app-sidebar>
   <div class="main-panel">
     <div class="content">
@@ -6,4 +7,5 @@
         <router-outlet></router-outlet>
       </div>
     </div>
+  </div>
 </div>
