--- a/src/app/page/listing/listing-order/listing-order.component.html
+++ b/src/app/page/listing/listing-order/listing-order.component.html
@@ -3,30 +3,32 @@
     <div class="col-4 offset-5 mb-5">
       <h2>RENDELÉSEK</h2>
     </div>
-    <div class="col-12 row mt-3 mb-5">
-    <div class="col-5">
-      <button class="btn btn-success btn-block" [routerLink]="[0]">
-        <i class="material-icons">add</i>ÚJ RENDELÉS
-      </button>
-    </div>
-    <div class="col-3"><select [(ngModel)]="filterKey" class="custom-select bg-light">
-        <option *ngFor="let key of filterKeys" [value]="key">
-          {{ key }}
-        </option>
-      </select>
-    </div>
-    <div class="col-4 search-bar"><form class="form-inline my-2 my-lg-0">
-        <input
-          (keyup)="onChangePhrase($event)"
-          class="form-control mr-sm-2"
-          type="text"
-          placeholder="Keresés"
-        />
-        <button class="btn btn-success my-2 my-sm-0" type="submit">
-          <i class="material-icons">manage_search</i> Keresés
+    <div class="col-12 row">
+      <div class="col-5">
+        <button class="btn btn-success btn-block mt-3 mb-5" style="font-size:18px" [routerLink]="[0]">
+          <i class="material-icons">add</i>Új rendelés
         </button>
-      </form>
-    </div>
+      </div>
+      <div class="col-3 mt-3 mb-5">
+        <select [(ngModel)]="filterKey" class="custom-select bg-light" style="font-size: 18px">
+          <option *ngFor="let key of filterKeys" [value]="key">
+            {{ key }}
+          </option>
+        </select>
+      </div>
+      <div class="col-4 search-bar mt-3 mb-5">
+        <form class="form-inline my-2 my-lg-0">
+          <input
+            (keyup)="onChangePhrase($event)"
+            class="form-control mr-sm-2"
+            type="text"
+            placeholder="Keresés"
+          />
+          <button class="btn btn-success my-2 my-sm-0" type="submit" style="font-size: 18px">
+            <i class="material-icons">manage_search</i> Keresés
+          </button>
+        </form>
+      </div>
     </div>
     <table class="table table-striped">
       <thead class="bg-dark text-light">
