--- a/src/app/widget/sidebar/sidebar.component.html
+++ b/src/app/widget/sidebar/sidebar.component.html
@@ -28,7 +28,7 @@
       </li>
       <li class="nav-item" (click)=onClickListItem($event)>
         <a class="nav-link" routerLink="/bills">
-          <i class="material-icons">euro</i>
+          <i class="material-icons">point_of_sale</i>
           <p>Pénztár</p>
         </a>
       </li>
