--- a/src/app/page/listing/listing-order/listing-order.component.html
+++ b/src/app/page/listing/listing-order/listing-order.component.html
@@ -5,12 +5,12 @@
     </div>
     <div class="col-12 row">
       <div class="col-5">
-        <button class="btn btn-success btn-block mt-3 mb-5" style="font-size:18px" [routerLink]="[0]">
-          <i class="material-icons">add</i>Új rendelés
+        <button class="btn btn-success btn-block mt-3 mb-5 ml-0" style="font-size:14px" [routerLink]="[0]">
+          <i class="material-icons">add</i> Új rendelés
         </button>
       </div>
       <div class="col-3 mt-3 mb-5">
-        <select [(ngModel)]="filterKey" class="custom-select bg-light" style="font-size: 18px">
+        <select [(ngModel)]="filterKey" class="custom-select bg-light" style="font-size: 20px">
           <option *ngFor="let key of filterKeys" [value]="key">
             {{ key }}
           </option>
@@ -24,7 +24,7 @@
             type="text"
             placeholder="Keresés"
           />
-          <button class="btn btn-success my-2 my-sm-0" type="submit" style="font-size: 18px">
+          <button class="btn btn-success my-2 my-sm-0" type="submit" style="font-size: 14px">
             <i class="material-icons">manage_search</i> Keresés
           </button>
         </form>
@@ -35,11 +35,11 @@
         <tr>
           <!-- <th *ngFor="let col of cols">{{ col.text }}</th> -->
           <th (click)="onColumnSelect('id')"><b>#</b></th>
-          <th (click)="onColumnSelect('customerID')"><b>Vásárlók</b></th>
-          <th (click)="onColumnSelect('productID')"><b>Termékek</b></th>
-          <th (click)="onColumnSelect('amount')"><b>Mennyiség</b></th>
-          <th (click)="onColumnSelect('status')"><b>Státusz</b></th>
-          <th>
+          <th (click)="onColumnSelect('customerID')"><b style="font-size: 18px">Vásárlók</b></th>
+          <th (click)="onColumnSelect('productID')"><b style="font-size: 18px">Termékek</b></th>
+          <th (click)="onColumnSelect('amount')"><b style="font-size: 18px">Mennyiség</b></th>
+          <th (click)="onColumnSelect('status')"><b style="font-size: 18px">Státusz</b></th>
+          <th id="arrow">
             <i *ngIf="!direction" class="material-icons">keyboard_arrow_up</i>
             <i *ngIf="direction" class="material-icons">keyboard_arrow_down</i>
           </th>
