--- a/src/app/page/listing/listing-order/listing-order.component.scss
+++ b/src/app/page/listing/listing-order/listing-order.component.scss
@@ -4,9 +4,11 @@
 .material-icons {
   font-size: 24px,
 }
-// btn {
-//   font-size: 24px,
-// }
+#arrow {
+  display: flex;
+  justify-content: flex-end,
+}
+
 
 
 
