--- a/src/app/pages/bill-list/bill-list.component.html
+++ b/src/app/pages/bill-list/bill-list.component.html
@@ -51,7 +51,7 @@
                                             {{ bill[attribute.key] }}</td>
                                         <td>
                                             <div class="btn-group">
-                                                <button [routerLink]="['bill/'+'0']"
+                                                <button [routerLink]="['bill/'+ bill.id]"
                                                     class="btn btn-info">
                                                     <i class="fa fa-pencil"></i>
                                                 </button>
