--- a/src/app/pages/list-category/list-category.component.html
+++ b/src/app/pages/list-category/list-category.component.html
@@ -20,7 +20,11 @@
                   <span [id]="'arrow_up_'+fkey" class="arrow material-icons md-18">keyboard_arrow_up</span>
                   <span [id]="'arrow_down_'+fkey" class="arrow material-icons md-18">keyboard_arrow_down</span>
                 </th>
-                <th>actions</th>
+                <th class="action">
+                  <button type="button" [routerLink]="'/category/0'" class="btn btn-success btn-block">
+                    <i class="fa fa-plus" aria-hidden="true"></i> New Category
+                  </button>
+                </th>
               </thead>
 
               <tbody>
