--- a/src/app/page/listing/listing-product/listing-product.component.scss
+++ b/src/app/page/listing/listing-product/listing-product.component.scss
@@ -1,4 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+
+.table {
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
+}
+
+
 th {
     cursor: pointer;
     user-select: none;
+}
+
+td {
+  text-align: center; 
+  vertical-align: middle;
+}
+
+.material-icons {
+  font-size: 24px;
 }
