--- a/src/app/page/listing/listing-product/listing-product.component.html
+++ b/src/app/page/listing/listing-product/listing-product.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+
     <div class="row">
         <div class="col-4 offset-5 mb-5">
             <h2>ÖSSZES TERMÉK</h2>
@@ -15,6 +16,7 @@
                     </option>
                 </select>
             </div>
+
             <div class="col-4 search-bar mt-3 mb-5">
                 <form class="form-inline my-2 my-lg-0">
                     <input (keyup)="onChangePhrase($event)" class="form-control mr-sm-2" type="text"
@@ -24,6 +26,9 @@
                     </button>
                 </form>
             </div>
+        </div>
+        <div *ngIf="numberOfActiveProducts$ | async">
+            ͏͏͏͏͏͏͏<p>Aktív termékek száma: {{ numberOfActiveProducts$ | async }}</p>
         </div>
         <table class="table table-striped">
             <thead class="bg-dark text-light">
